Corrected scroll bar shift

--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,10 @@
 /* base */
 /*  */
 
+html {
+  overflow-y: scroll;
+}
+
 body {
   font-family: Roboto, sans-serif;
   background-image: url('https://content.codecademy.com/courses/learn-css-selectors-visual-rules/hypnotize_bg.png');
